# Linguista

./: .env.example  .replit  README.md  app.py  config.py  gemini_utils.py  nlp_utils.py  package-lock.json  package.json  pyproject.toml  routes.py  utils.py
attached_assets/: app.py  base.html  chat.html  gemini_utils.py  nlp_utils.py  result_display.html  sample_texts.js  style.css  task_explanation.html  test_nlp_utils.py
backend/: .env.example  Dockerfile  README.md  app.py  config.py  gemini_utils.py  nlp_utils.py  nltk_setup.py  requirements.txt  routes.py
public/: index.html  manifest.json
src/: App.js  index.css
src/components/Chat/: ChatInterface.js  ChatOptions.js
src/components/Layout/: Footer.js  Header.js  Layout.js  Sidebar.js
src/components/NLP/: ResultDisplay.js  TaskSelector.js  TextInput.js  VisualizationDisplay.js
src/contexts/: ThemeContext.js
src/pages/: Chat.js  CodeExamples.js  Home.js  NLPBasics.js  Visualizations.js
src/services/: api.js
static/css/: style.css
static/js/: chat.js  main.js
templates/: base.html  chat.html  code_examples.html  error.html  index.html  nlp_basics.html  visualizations.html
templates/errors/: 404.html  500.html
templates/partials/: result_display.html  task_explanation.html
test/: test_app.py
